# Parkability

./: .gitignore  Makefile  README.md  package-lock.json
analysis/: README.md  bully_timing.py  lamport_vs_wall.py  propagation_delay.py  radio_scheduler_stats.py
app/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
app/src/: App.jsx  index.css  styles.css
app/src/components/: ActivityLog.jsx  ArchitectureSection.jsx  Dashboard.jsx  Footer.jsx  HeroSection.jsx  LeaderFailoverPanel.jsx  Legend.jsx  (+9 more)
backend/: README.md  db.py  ingest_mqtt.py  ingest_rest.py  main.py  requirements.txt  schema.sql  state.py  ws.py
concepts/01-network-communication/: README.md
concepts/02-concurrency-coordination/: README.md
concepts/03-peer-to-peer/: README.md
concepts/04-naming-service-discovery/: README.md
concepts/05-consistency-replication/: README.md
concepts/06-fault-tolerance/: README.md
concepts/07-logical-time/: README.md
concepts/08-scalability/: README.md
docs/: architecture.md  bringup.md  database.md  hardware-decisions.md
docs/decisions/: README.md
firmware/leader-node/: CMakeLists.txt  platformio.ini  sdkconfig.defaults
firmware/leader-node/src/: CMakeLists.txt  aggregator.c  aggregator.h  bully.c  bully.h  config.h  config.local.example.h  espnow_handler.c  espnow_handler.h  heartbeat.c  heartbeat.h  main.c  radio_scheduler.c  radio_scheduler.h  wifi_uplink.c  wifi_uplink.h
firmware/sensor-node/: CMakeLists.txt  platformio.ini
firmware/sensor-node/src/: CMakeLists.txt  config.h  main.c
firmware/shared/: CMakeLists.txt  lamport.c  lamport.h  messages.h  spot_id.c  spot_id.h
protocols/: app-backend-ws.md  esp-now-message-format.md  leader-backend-api.md
tools/: README.md
(+4 files in other folders)
